[package]
name = "wk1_rtic_lora"
version = "0.1.0"
authors = ["Antony Mapfumo"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

stm32f4xx-hal = { version = "0.21", features = ["stm32f446"] }

rtic = { version = "2.1", features = ["thumbv7-backend"] }

ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"

shared-bus = { version = "0.3", features = ["cortex-m"] }
heapless = "0.8"

defmt = "0.3"
defmt-rtt = "0.4"
nb = "1.1.0"
display-interface-i2c = "0.5.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
